scripts/nullaway/annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8.txt
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/WeekTable.java:46: error: [NullAway] dereferenced expression source is @Nullable
		for (Slot s : source.slots)
		                    ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/Group.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.classes = null;	//Implement
		             ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/Group.java:69: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return (this.links.getLinks(f).size() != 0 ? this.links.getLinks(f).get(0).getTeacher() : null);
		^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/HashMap.java:61: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/Filler.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields done (line 16), steps (line 17), errorsIndexes (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Filler(PrintStream aPs, ArrayList<Classroom> aClassrooms, ArrayList<Group> aGroups, ArrayList<Teacher> aTeachers, ArrayList<ClassType> aTypes, Time aMWWH/*, ArrayList<Constraint> aConstraints*/)	{
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/Filler.java:37: error: [NullAway] initializer method does not guarantee @NonNull fields done (line 16), steps (line 17), errorsIndexes (line 18), MWWH (line 21) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Filler(PrintStream aPs, DataStore ds) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/Filler.java:34: error: [NullAway] read of @NonNull field ps before initialization
		this.ps = aPs == null ? ps : aPs;
		                        ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/Filler.java:42: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.MWWH = ds.getMWWH();
		          ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/DATA/Filler.java:754: error: [NullAway] dereferenced expression s1.intersection(s2) is @Nullable
					if (s1.intersects(s2) && s1.intersection(s2).getDuration().isntLessThan(duration))
					                                            ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/GUI/TeacherPanel.java:79: error: [NullAway] initializer method does not guarantee @NonNull fields comboData (line 67), selectedTeacher (line 71) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public TeacherPanel(DataStore ds) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/GUI/ClassroomPanel.java:305: error: [NullAway] dereferenced expression p is @Nullable
					cp.setPosition(new Point(p.x + 2, p.y + 2));
					                          ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/GUI/GroupPanel.java:336: error: [NullAway] dereferenced expression root is @Nullable
				Enumeration e = root.breadthFirstEnumeration();
				                    ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/GUI/EdTViewerWindow.java:28: error: [NullAway] dereferenced expression wt.getOwner() is @Nullable
		frame.setTitle(wt.getOwner().toString());
		                            ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/GUI/MapPanel.java:53: error: [NullAway] dereferenced expression img is @Nullable
		label.setBounds(0, 0, img.getWidth(), img.getHeight());
		                         ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/GUI/MainFrame.java:312: error: [NullAway] dereferenced expression btnWeekTable is @Nullable
					if(btnWeekTable.isSelected()) {
					               ^
    (see http://t.uber.com/nullaway )
../annotator/url8db16c7d62_Arsaell_EdT_tgz-pJ8-DATA_MainJ8/src/GUI/WelcomeFrame.java:117: error: [NullAway] passing @Nullable parameter 'dataStore' where @NonNull is required
					new MainFrame(dataStore);
					              ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
16 errors
